Changelog

- Based on Lakewalker [Rodney Kinney, Brent Easton]
- Initial version [Jan Bilak]
- Edit mode [Petr Dlouhy]

...

- see SVN history