@@ -3,6 +3,7 @@ Changelog
 - Based on Lakewalker [Rodney Kinney, Brent Easton]
 - Initial version [Jan Bilak]
 - Edit mode [Petr Dlouhy]
+- Added RUIAN as an alternative [Marian Kyral]
 
 ...
 
